# fastapi-ci-cd-demo

./: database.py  main.py  pyproject.toml  users.db
.github/workflows/: ci.yml
